# lumina

./: .env.download  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/commands/: release.md
.github/workflows/: macos-build.yml  main.yml
docs/: MSIX.md
docs/superpowers/specs/: 2026-07-14-edit-capture-date-design.md
msix/: Package.appxmanifest
public/: splashscreen.html
scripts/: generate-icons.mjs  pack-msix.mjs  release.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_gps_index.sql  0003_album_hierarchy.sql  0004_date_override.sql  0005_folder_mirror.sql  0006_faces.sql  0007_geocache.sql
src-tauri/src/: geocode.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  store.rs
src-tauri/src/ai/face/: engine.rs  mod.rs  models.rs  store.rs
src-tauri/src/api/: albums.rs  backup.rs  faces.rs  geocode.rs  import.rs  mod.rs  photos.rs  scan.rs  settings.rs  tags.rs  thumbnails.rs
src-tauri/src/backup/: device.rs  manifest.rs  mod.rs  run.rs  scan.rs
src-tauri/src/core/: config.rs  error.rs  hash.rs  mod.rs  models.rs  query.rs  state.rs
src-tauri/src/database/: albums.rs  folders.rs  geocache.rs  migrations.rs  mod.rs  photos.rs  pool.rs  settings.rs  tags.rs
src-tauri/src/events/: mod.rs
src-tauri/src/metadata/: exif.rs  exif_write.rs  mod.rs
src-tauri/src/mirror/: mod.rs
src-tauri/src/scanner/: discovery.rs  mod.rs  pipeline.rs  watcher.rs
src-tauri/src/search/: mod.rs
src-tauri/src/thumbnail/: cache.rs  decode.rs  generator.rs  mod.rs  raw.rs  shell_thumb.rs  video.rs
src-tauri/tests/: integration.rs
src/components/backup/: BackupDeviceDialog.tsx
src/components/command/: CommandPalette.tsx
src/components/common/: BottomProgressBar.tsx  ColorLabelPicker.tsx  ConfirmDialog.tsx  DateTimeEditor.tsx  EmptyState.tsx  SettingsLayout.tsx  StarRating.tsx  ThemeToggle.tsx
src/components/editor/: CropOverlay.tsx  ImageEditor.tsx  filters.ts  params.ts  render.ts
src/components/layout/: AlbumTree.tsx  AppShell.tsx  FaceProgressBar.tsx  ScanProgressBar.tsx  Sidebar.tsx  TopBar.tsx  WindowControls.tsx
src/components/map/: LocationPicker.tsx  MapView.tsx  cluster.ts  geo.ts  places.ts
src/components/people/: FaceCrop.tsx
src/components/ui/: command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  select.tsx  separator.tsx  sonner.tsx
src/components/updater/: UpdateBadge.tsx  UpdatePrompt.tsx
src/hooks/: useAlbums.ts  useBackup.ts  useFaces.ts  useKeyboard.ts  useMapPhotos.ts  usePhotoBrowser.ts  usePhotoMutations.ts  usePhotos.ts  useScan.ts  useSettings.ts  useTags.ts  useWindowTitle.ts  useWindowedPhotos.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json
src/lib/: albumLabel.ts  albumTree.ts  api.ts  events.ts  format.ts  platform.ts  query.ts  splash.ts
src/pages/: AlbumDetailPage.tsx  AlbumsPage.tsx  LibraryPage.tsx  MapPage.tsx  PeoplePage.tsx  PersonDetailPage.tsx  SearchPage.tsx  SettingsPage.tsx  TimelinePage.tsx
src/stores/: albumContextStore.ts  albumDeleteStore.ts  backupDeviceStore.ts  createDialogStore.ts  dedupeExitStore.ts  deleteDialogStore.ts  editorStore.ts  faceStore.ts  folderSyncModeStore.ts  importAlbumsDialogStore.ts  renamePhotoStore.ts  scanStore.ts  selectionStore.ts  uiStore.ts  updaterStore.ts
src/types/: index.ts
