[package]
name = "lumina"
version = "0.2.0"
description = "Lumina — a fast, local-first modern photo library manager."
authors = ["Lumina"]
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-only"

# The library that holds all backend logic. `main.rs` is a thin wrapper so the
# same code can be exercised from integration tests and (later) other frontends.
[lib]
name = "lumina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lumina"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri ---
# `protocol-asset` enables the asset protocol used to serve cached thumbnails
# to the webview via `convertFileSrc` (zero-copy, no IPC).
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
# In-app auto-update: check a signed GitHub Releases manifest, download and
# install the new bundle, then relaunch (via the process plugin).
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

# --- Async runtime & parallelism ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
rayon = "1.10"
num_cpus = "1.16"

# --- Database ---
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# --- Images & metadata ---
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff", "avif"] }
fast_image_resize = { version = "5", features = ["image"] }
kamadak-exif = "0.5"
# Pure-Rust EXIF *writing* (kamadak-exif is read-only). Used to bake a corrected
# capture date back into JPEG/TIFF/PNG originals.
little_exif = "0.6"
# Pure-Rust camera RAW decoding (embedded preview extraction). Covers CR2/CR3,
# NEF, ARW, DNG, ORF, RAF, RW2, PEF, SRW … with no system libraries. LGPL-2.1.
rawler = "0.7"

# --- Filesystem ---
walkdir = "2.5"
notify = "6.1"
notify-debouncer-full = "0.3"
# Send deleted originals to the OS trash / Recycle Bin instead of unlinking them
# outright, so a "delete from disk" stays recoverable from the system trash.
trash = "5"

# --- On-device AI (face recognition) ---
# Pure-Rust ONNX inference engine (no C++/ONNXRuntime native lib to ship, in the
# same spirit as `rawler`). Runs the YuNet (MIT) face detector and SFace
# (Apache-2.0) face embedder fully offline on the CPU. Both model licenses are
# commercial-use-friendly; see `ai::face::models`.
tract-onnx = "0.21"
# Small blocking HTTP client (rustls) used *only* to fetch the two model files
# on first enable from a configurable host. No user data is ever uploaded.
ureq = { version = "2", default-features = false, features = ["tls"] }

# --- Serialization & misc ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Caching ---
lru = "0.12"
parking_lot = "0.12"

# Windows Shell thumbnail provider (IShellItemImageFactory) — lets us reuse the
# OS-generated thumbnails Explorer shows for videos (and RAW/HEIC when a codec is
# installed), with no bundled ffmpeg or external binaries.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3.14"

[features]
# Compile-time switch for optional HEIC support. Disabled by default because it
# requires a system libheif; the code path degrades gracefully when absent.
heic = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
